# codesearch

./: .env.example  .gitignore  PLAN.md  README.md  app.py  pyproject.toml  requirements.txt
src/codesearch/: config.py  data.py
src/codesearch/retrievers/: bm25.py  dense.py
